k8s/flux/cluster/apps/security/zitadel/app/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel-tailscale-ingress
  namespace: zitadel
spec:
  ingressClassName: tailscale
  rules:
    - 
      host: zitadel-homelab.taildd1ad.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zitadel
                port:
                  number: 80
  defaultBackend:
    service:
      name: zitadel
      port:
        number: 80
  tls:
    - hosts:
        - zitadel-homelab.taildd1ad.ts.net
